--- a/buttons.html
+++ b/buttons.html
@@ -7,14 +7,74 @@
   width: 105px;
 	border-radius: 2px;
 	cursor: pointer;
+	margin-right: 8px;
+	transition: opacity 0.15s;
     }
+
+		.subscribe-button:hover {
+			opacity: .8;
+		}
+
+		.subscribe-button:active {
+			opacity: .5;
+		}
+
 	.join-button {
 		background-color: white;
+		border-color: rgb(27, 119, 240);
+		border-style: solid;
+		border-width: 1px;
+		color: rgb(27, 119, 240);
+		height: 36px;
+		width: 62px;
+		border-radius: 2px;
+		cursor: pointer;
+		margin-right: 8px;
+		transition: background-color 0.15s,
+		color 0.15s;
 	}
+
+.join-button:hover {
+	background-color: rgb(27, 119, 240);
+	color: white;
+}
+
+.join-button:active {
+	opacity: 0.75;
+}
+
+	.tweet-button {
+		background-color:rgb(31, 153, 235);
+		color: white;
+		border: none;
+		border-radius: 18px;
+		height: 36px;
+		width: 74px;
+		font-weight: bold;
+		font-size: 15px;
+		margin-right: 8px;
+		cursor: pointer;
+		transition: box-shadow 0.15s;
+	}
+
+	.tweet-button:hover {
+		box-shadow: 5px 5px 10px rgba(0,0,0,.15);
+	}
+
+	.tweet-button:active {
+		opacity: .85;
+	}
+
 </style>
 
 <button class="subscribe-button">
 	SUBSCRIBE
 </button>
 
-<button class="join-button">JOIN</button>
+<button class="join-button">
+	JOIN
+</button>
+
+<button class="tweet-button">
+	Tweet
+</button>
